# web_search_agent

./: .env.example  Cargo.toml  LICENSE  README  README.md
src/: agent.rs  config.rs  lib.rs  main.rs  metrics.rs  parser.rs  structured.rs  tools.rs  types.rs
src/tools/: fetch_url_tool.rs  get_crypto_price_tool.rs  get_weather_tool.rs  search_web_tool.rs  serach_web_tool.rs  tool_registry.rs
