[package]
name = "web_search_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
dotenvy = "0.15.7"
futures = "0.3.32"
reqwest = { version = "0.13.2", features = ["json"] }
schemars = "1.2.1"
scraper = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
urlencoding = "2.1.3"
